# oracle-sdk-client

./: .gitignore  AGENTS.md  Makefile  README.md
src/: main.py  ssh_config_builder.py  ssh_sync.py
src/oci_client/: auth.py  client.py  models.py
src/oci_client/utils/: display.py  resources.py  session.py  ssh_config_generator.py  yamler.py
src/oci_ssh_sync/: __init__.py
tests/: test_auth.py  test_client.py  test_services.py
tools/: mypy.ini  pyproject.toml  setup.cfg
tools/examples/: basic_usage.py
tools/src/: check_image_updates.py  delete_resources.py  node_cycle_pools.py  oke_node_cycle.py  oke_node_pool_upgrade.py  oke_upgrade.py  oke_version_report.py  recycle_node_pools.py  ssh_config_builder.py  ssh_sync.py
tools/src/oci_client/: auth.py  client.py  models.py  resource_deletion.py
tools/src/oci_client/services/: __init__.py  bastion.py  compute.py  identity.py
tools/src/oci_client/utils/: config.py  display.py  resources.py  session.py  ssh_config.py  ssh_config_generator.py  yamler.py
tools/src/oci_ssh_sync/: __init__.py
tools/tests/: __init__.py  test_auth.py  test_client.py  test_node_cycle_pools.py  test_oke_node_cycle.py  test_oke_node_pool_upgrade.py  test_oke_upgrade.py  test_oke_version_report.py  test_resource_deletion.py  test_services.py  test_ssh_sync.py
